[package]
name = "fighting_sisters"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A collection of static hero icons."

[dependencies]
maud = "0.26.0"
rocket = { version = "0.5.1" }
include_directory = "0.1.1"
grid = "0.18.0"
rand = "0.8.5"
static_hero_icons = "0.3.0"

[dependencies.uuid]
version = "1.11.1"
features = [
    "v4",
]
